🦐🛴 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -28,14 +28,27 @@
     </button>
     
     <div id="gameButtonArea">
-      <button id="button1" onmousedown="startTone(1)" onmouseup="stopTone()" onclick="guess(1)">
+      <br>
+      <button id="button1" onmousedown="startSound(1)" onmouseup="stopTone()" onclick="guess(1)">
       </button>
-      <button id="button2" onmousedown="startTone(2)" onmouseup="stopTone()" onclick="guess(2)">
+      <audio src="https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/UFF.mp3?v=1648455093034"
+             id = "ergh"></audio>
+      <button id="button2" onmousedown="startSound(2)" onmouseup="stopTone()" onclick="guess(2)">
       </button>
-      <button id="button3" onmousedown="startTone(3)" onmouseup="stopTone()" onclick="guess(3)">
+      <audio src="https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/ERGH.mp3?v=1648445970838"
+             id = "uuf"></audio>
+      <button id="button3" onmousedown="startSound(3)" onmouseup="stopTone()" onclick="guess(3)">
       </button>
-      <button id="button4" onmousedown="startTone(4)" onmouseup="stopTone()" onclick="guess(4)">
+      <audio src="https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/OOF.mp3?v=1648455006941"
+             id = "oof"></audio>
+      <button id="button4" onmousedown="startSound(4)" onmouseup="stopTone()" onclick="guess(4)">
       </button>
+      <audio src="https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/HOOHOO.mp3?v=1648460390699"
+             id = "hoohoo"></audio>
+      <button id="button5" onmousedown="startSound(5)" onmouseup="stopTone()" onclick="guess(5)">
+      </button>
+      <audio src="https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/AAA.mp3?v=1648460241011"
+             id = "aaa"></audio>
     </div>
   </body>
 </html>
