--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       Stop
     </button>
     
+    <div id="timerArea">
+      <p id="timer">
+        You have 8 seconds to guess each pattern before you lose. Good luck.
+      </p>
+    </div>
+    
     <div id="gameButtonArea">
       <br>
       <button id="button1" onmousedown="startSound(1)" onmouseup="stopTone()" onclick="guess(1)">
